Fix overlapping borders inside the grid

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     height: 570px;
     margin: 0 auto;
     display: flex;
+    border: 1px solid #000;
+    border-left: 0;
+    border-top: 0;
 }
 
 .child-container {
@@ -19,8 +22,5 @@
     height: 100%;
     border: 1px solid #000;
     border-bottom: 0;
-}
-
-.child:last-child {
-    border-bottom: 1px solid #000;
+    border-right: 0;
 }
